--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
     <body>
         <h1>pixel.vukky.net</h1>
         <p>I got tired of searching for pixel icons online, so this is a simple search tool that combines various icon packs into one search.</p>
+        <p><b>Do not hotlink these icons. Please download them yourself.</b></p>
         Type here: <input oninput="showIcon(this.value)"><br>
         See here:<br>
         <span id="rawr"></span>
