--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>pixel.vukky.net</title>
+        <meta name="robots" content="noindex">
         <style>
             .icon {
                 image-rendering: pixelated;
