--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,12 @@
     </head>
     <body>
         <h1>pixel.vukky.net</h1>
-        <p><img src="assets/icons/fugue/image-share.png" class="icon"> I got tired of searching for pixel icons online, so this is a simple search tool that combines various icon packs into one search.</p>
-        <p><b><img src="assets/icons/fatcow-16/image_link.png" class="icon"> Do not hotlink these icons. Please download them yourself.<br><img src="assets/icons/fatcow-16/emotion_shocked.png" class="icon"> Also, some icons may be offensive or inappropiate.</b></p>
-        <img src="assets/icons/fatcow-16/report_magnify.png" class="icon"> Search the library: <input id="search" value="Loading..." oninput="showIcon(this.value)" disabled><br><br>
-        <img src="assets/icons/fugue/eye--plus.png" class="icon"> See your results: <span id="rawr"></span>
+        <p><img src="assets/icons/fugue/image-share.png" class="icon" data-tippy-content="<img src='assets/icons/fugue/image-share.png' class='icon' width='32'> <b>image-share</b> (fugue)"> I got tired of searching for pixel icons online, so this is a simple search tool that combines various icon packs into one search.</p>
+        <p><b><img src="assets/icons/fatcow-16/image_link.png" class="icon" data-tippy-content="<img src='assets/icons/fatcow-16/image_link.png' class='icon' width='32'> <b>image_link</b> (fatcow-16)"> Do not hotlink these icons. Please download them yourself.<br><img src="assets/icons/fatcow-16/emotion_shocked.png" class="icon" data-tippy-content="<img src='assets/icons/fatcow-16/emotion_shocked.png' class='icon' width='32'> <b>emotion_shocked</b> (fatcow-16)"> Also, some icons may be offensive or inappropiate.</b></p>
+        <img src="assets/icons/fatcow-16/report_magnify.png" class="icon" data-tippy-content="<img src='assets/icons/fatcow-16/report_magnify.png' class='icon' width='32'> <b>report_magnify</b> (fatcow-16)"> Search the library: <input id="search" value="Loading..." oninput="showIcon(this.value)" disabled><br><br>
+        <img src="assets/icons/fugue/eye--plus.png" class="icon" data-tippy-content="<img src='assets/icons/fugue/eye--plus.png' class='icon' width='32'> <b>eye--plus</b> (fugue)"> See your results: <span id="rawr"></span>
 
-        <h2><img src="assets/icons/fatcow-32/books.png" class="icon"> Licensing</h2>
+        <h2><img src="assets/icons/fatcow-32/books.png" class="icon" data-tippy-content="<img src='assets/icons/fatcow-32/books.png' class='icon' width='32'> <b>books</b> (fatcow-32)"> Licensing</h2>
         <p>This project uses icons from the following icon packs.<br>Please note that I am not affiliated with these websites.</p>
         <ul>
             <li><a href="https://p.yusukekamiyamane.com/">Fugue 3.5.6 by Yusuke Kamiyamane</a>, licensed under <a href="https://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a> (no-attribution license available for <a href="https://p.yusukekamiyamane.com/icons/license/">$69.95 USD</a>)</li>
