--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,11 @@
         </style>
     </head>
     <body>
-        <h1>pixel.vukky.net</h1>
-        <p><img src="assets/icons/fugue/image-share.png" class="icon" data-tippy-content="<img src='assets/icons/fugue/image-share.png' class='icon' width='32'> <b>image-share</b> (fugue)"> I got tired of searching for pixel icons online, so this is a simple search tool that combines various icon packs into one search.</p>
+        <h1>pixel8<small style="font-size: 12px;">.vukky.net</small></h1>
+        <p><i class="p8-fugue p8-image-share"></i> I got tired of searching for pixel icons online, so this is a simple search tool that combines various icon packs into one search.</p>
         <p><b><img src="assets/icons/fatcow-16/image_link.png" class="icon" data-tippy-content="<img src='assets/icons/fatcow-16/image_link.png' class='icon' width='32'> <b>image_link</b> (fatcow-16)"> Do not hotlink these icons. Please download them yourself.<br><img src="assets/icons/fatcow-16/emotion_shocked.png" class="icon" data-tippy-content="<img src='assets/icons/fatcow-16/emotion_shocked.png' class='icon' width='32'> <b>emotion_shocked</b> (fatcow-16)"> Also, some icons may be offensive or inappropiate.</b></p>
         <img src="assets/icons/fatcow-16/report_magnify.png" class="icon" data-tippy-content="<img src='assets/icons/fatcow-16/report_magnify.png' class='icon' width='32'> <b>report_magnify</b> (fatcow-16)"> Search the library: <input id="search" value="Loading..." oninput="showIcon(this.value)" disabled><br><br>
-        <img src="assets/icons/fugue/eye--plus.png" class="icon" data-tippy-content="<img src='assets/icons/fugue/eye--plus.png' class='icon' width='32'> <b>eye--plus</b> (fugue)"> See your results: <span id="rawr"></span>
+        <img src="assets/icons/fugue/eye--arrow.png" class="icon" data-tippy-content="<img src='assets/icons/fugue/eye--arrow.png' class='icon' width='32'> <b>eye--arrow</b> (fugue)"> See your results: <span id="rawr"></span>
 
         <h2><img src="assets/icons/fatcow-32/books.png" class="icon" data-tippy-content="<img src='assets/icons/fatcow-32/books.png' class='icon' width='32'> <b>books</b> (fatcow-32)"> Licensing</h2>
         <p>This project uses icons from the following icon packs.<br>Please note that I am not affiliated with these websites.</p>
@@ -29,6 +29,10 @@
             <li><a href="https://github.com/damieng/silk-companion">Silk-Companion by Damien Guard</a>, based on Silk by Mark James, licensed under <a href="https://creativecommons.org/licenses/by/2.5/">CC BY 2.5</a> and <a href="https://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a></li>
         </ul>
 
+        <h2>Scwipt OwO</h2>
+        <p>Nyowo.</p>
+
+        <script src="/pixel8.js"></script>
         <script src="https://unpkg.com/@popperjs/core@2"></script>
         <script src="https://unpkg.com/tippy.js@6"></script>
         <script src="//unpkg.com/string-similarity/umd/string-similarity.min.js"></script>
@@ -40,7 +44,7 @@
 
             let iconArray;
             async function fetchIcons() {
-                iconArray = await fetch("/assets/icons.json").then(res => res.json());
+                await fetch("/assets/icons.json").then(res => res.json()).then(res => iconArray = res.icons)
                 document.querySelector("#search").disabled = false;
                 document.querySelector("#search").value = "";
             }
@@ -54,6 +58,7 @@
                 return resultArray.slice(0, 100)
             }
             function showIcon(searchName) {
+                if (searchName.toLowerCase() == "something similar" || searchName.toLowerCase() == "something similar.") return document.querySelector("#rawr").innerText = "Haha, very clever.";
                 let results = findIcon(searchName);
                 let resultString = "";
                 results.forEach((result, index) => {
