--- a/public/index.html
+++ b/public/index.html
@@ -12,32 +12,37 @@
             textarea {
                 resize: none;
             }
+            ul {
+                list-style-type: none;
+                padding: 0;
+                margin: 0;
+            }
         </style>
         <script src="/pixel8.js" defer></script>
     </head>
     <body>
         <h1>pixel8<small style="font-size: 12px;">.vukky.net</small></h1>
-        <p><i class="p8-fugue p8-image-share"></i> I got tired of searching for pixel icons online, so this is a simple search tool that combines various icon packs into one search.</p>
+        <p><i class="p8-fugue p8-block-share"></i> I got tired of searching for pixel icons online, so this is a simple search tool that combines various icon packs into one search.</p>
         <p><b><i class="p8-fatcow-16 p8-image_link"></i> Do not hotlink these icons. Please download them yourself.<br><i class="p8-fatcow-16 p8-emotion_shocked"></i> Also, some icons may be offensive or inappropiate.</b></p>
         <i class="p8-fatcow-16 p8-report_magnify"></i> Search the library: <input id="search" value="Loading..." oninput="showIcon(this.value)" disabled><br><br>
         <i class="p8-fugue p8-eye--arrow"></i> See your results: <span id="rawr"></span>
 
         <h2><i class="p8-fatcow-32 p8-books"></i> Licensing</h2>
-        <p>This project uses icons from the following icon packs.<br>Please note that I am not affiliated with these websites.<br><b>When you use an icon, you must follow the licenses below for the respective pack.</b></p>
+        <p><i class="p8-fugue p8-folder-stamp"></i> This project uses icons from the following icon packs.<br><i class="p8-fugue p8-money--minus"></i> Please note that I am not affiliated with these websites.<br><b><i class="p8-fugue p8-creative-commons"></i> When you use an icon, you must follow a license below for the respective pack.</b></p>
         <ul>
-            <li><a href="https://p.yusukekamiyamane.com/">Fugue 3.5.6 by Yusuke Kamiyamane</a>, licensed under <a href="https://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a> (no-attribution license available for <a href="https://p.yusukekamiyamane.com/icons/license/">$69.95 USD</a>)</li>
-            <li><a href="https://p.yusukekamiyamane.com/">Diagona 1.0.0 by Yusuke Kamiyamane</a>, licensed under <a href="https://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a> (no-attribution license available for <a href="https://p.yusukekamiyamane.com/icons/license/">$9.95 USD</a>)</li>
-            <li><a href="https://www.fatcow.com/free-icons">"Farm-Fresh Web Icons" 3.9.2 by FatCow</a>, licensed under <a href="https://creativecommons.org/licenses/by/3.0/us/">CC BY 3.0 US</a></a></li>
-            <li><a href="https://web.archive.org/web/20221129102416/http://www.famfamfam.com/lab/icons/silk/">Silk 1.3 by Mark James</a>, licensed under <a href="https://creativecommons.org/licenses/by/2.5/">CC BY 2.5</a> and <a href="https://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a></li>
-            <li><a href="https://web.archive.org/web/20221123224916/http://www.famfamfam.com/lab/icons/mini/">Mini by Mark James</a>, no restrictions on use</li>
-            <li><a href="https://web.archive.org/web/20221130133606/http://www.famfamfam.com/lab/icons/flags/">Flags by Mark James</a>, no restrictions on use</li>
-            <li><a href="https://web.archive.org/web/20221224123303/http://www.famfamfam.com/lab/icons/mint/">Mint 1.0 by Mark James</a>, licensed under <a href="https://creativecommons.org/licenses/by/2.5/">CC BY 2.5</a></li>
-            <li><a href="https://github.com/damieng/silk-companion">Silk-Companion by Damien Guard</a>, based on Silk by Mark James, licensed under <a href="https://creativecommons.org/licenses/by/2.5/">CC BY 2.5</a> and <a href="https://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a></li>
+            <li><i class="p8-fugue p8-creative-commons"></i><i class="p8-fatcow-16 p8-attribution"></i> <a href="https://p.yusukekamiyamane.com/">Fugue 3.5.6 by Yusuke Kamiyamane</a>, licensed under <a href="https://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a> (no-attribution license available for <a href="https://p.yusukekamiyamane.com/icons/license/">$69.95 USD</a>)</li>
+            <li><i class="p8-fugue p8-creative-commons"></i><i class="p8-fatcow-16 p8-attribution"></i> <a href="https://p.yusukekamiyamane.com/">Diagona 1.0.0 by Yusuke Kamiyamane</a>, licensed under <a href="https://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a> (no-attribution license available for <a href="https://p.yusukekamiyamane.com/icons/license/">$9.95 USD</a>)</li>
+            <li><i class="p8-fugue p8-creative-commons"></i><i class="p8-fatcow-16 p8-attribution"></i> <a href="https://www.fatcow.com/free-icons">"Farm-Fresh Web Icons" 3.9.2 by FatCow</a>, licensed under <a href="https://creativecommons.org/licenses/by/3.0/us/">CC BY 3.0 US</a></a></li>
+            <li><i class="p8-fugue p8-creative-commons"></i><i class="p8-fatcow-16 p8-attribution"></i> <a href="https://web.archive.org/web/20221129102416/http://www.famfamfam.com/lab/icons/silk/">Silk 1.3 by Mark James</a>, licensed under <a href="https://creativecommons.org/licenses/by/2.5/">CC BY 2.5</a> and <a href="https://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a></li>
+            <li><i class="p8-fugue p8-tick"></i> <a href="https://web.archive.org/web/20221123224916/http://www.famfamfam.com/lab/icons/mini/">Mini by Mark James</a>, no restrictions on use</li>
+            <li><i class="p8-fugue p8-tick"></i> <a href="https://web.archive.org/web/20221130133606/http://www.famfamfam.com/lab/icons/flags/">Flags by Mark James</a>, no restrictions on use</li>
+            <li><i class="p8-fugue p8-creative-commons"></i><i class="p8-fatcow-16 p8-attribution"></i> <a href="https://web.archive.org/web/20221224123303/http://www.famfamfam.com/lab/icons/mint/">Mint 1.0 by Mark James</a>, licensed under <a href="https://creativecommons.org/licenses/by/2.5/">CC BY 2.5</a></li>
+            <li><i class="p8-fugue p8-creative-commons"></i><i class="p8-fatcow-16 p8-attribution"></i> <a href="https://github.com/damieng/silk-companion">Silk-Companion by Damien Guard</a>, based on Silk by Mark James, licensed under <a href="https://creativecommons.org/licenses/by/2.5/">CC BY 2.5</a> and <a href="https://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a></li>
         </ul>
 
         <h2><i class="p8-fatcow-32 p8-script_link"></i> Script</h2>
         <p><i class="p8-fatcow-16 p8-html"></i> You can use the pixel8 script to automatically insert icons from HTML tags.<br><i class="p8-fugue p8-clipboard-block"></i> These tags can be copied by clicking on the icons you've searched for.<br><i class="p8-fatcow-16 p8-script_torn"></i> At this time, the script will not detect icons added after the page has loaded. You will need to use the <code>p8()</code> function to reload all icons.</p</p>
-        <p><b>Please remember to follow the respective pack's license when using icons.</b></p>
+        <p><b><i class="p8-fugue p8-creative-commons"></i> Please remember to follow the respective pack's license when using icons.</b></p>
         <p><i class="p8-fugue p8-download-cloud"></i> To use the pixel8 script, place <textarea rows="1" cols="90"><script defer src="https://cdn.jsdelivr.net/gh/vukkysoft/pixel/public/pixel8.js"></script></textarea> in your &lt;head&gt;.<br><i class="p8-fugue p8-tick"></i> Any &lt;i&gt; tags you've copied from pixel8 should load automatically after you have added the script.<br><i class="p8-fatcow-16 p8-internet_explorer"></i> It is not supported on very old browsers like IE and Chrome 44 or below. Please download icons manually if this is required.</p>
         <script src="https://unpkg.com/@popperjs/core@2"></script>
         <script src="https://unpkg.com/tippy.js@6"></script>
