planet goes nyooom

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,9 @@
         <script src="/pixel8.js" defer></script>
     </head>
     <body>
-        <h1>pixel8<small style="font-size: 12px;">.vukky.net</small></h1>
+        <script src="/assets/js/backlink.js"></script>
+        
+        <h1><img src="assets/img/vukkery-trans.gif" width="32"> pixel8<small style="font-size: 12px;">.vukky.net</small></h1>
         <p><i class="p8-fugue p8-block-share"></i> I got tired of searching for pixel icons online, so this is a simple search tool that combines various icon packs into one search.</p>
         <p><b><i class="p8-fatcow-16 p8-image_link"></i> Do not hotlink these icons. Please download them yourself.<br><i class="p8-fatcow-16 p8-emotion_shocked"></i> Also, some icons may be offensive or inappropiate.</b></p>
         <i class="p8-fatcow-16 p8-report_magnify"></i> Search the library: <input id="search" value="Loading..." oninput="showIcon(this.value)" disabled><br><br>
